--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "browserify": "^11.0.1",
     "budo": "^4.2.1",
     "crass": "^0.7.7",
+    "cannon": "^0.6.2",
     "garnish": "^2.3.0",
     "gh-pages": "^0.4.0",
     "karma": "^0.13.9",
