--- a/package.json
+++ b/package.json
@@ -6,37 +6,37 @@
   "main": "src/vr-markup.js",
   "dependencies": {
     "document-register-element": "^0.4.5",
+    "three-dev": "^0.72.0",
     "tween.js": "^15.0.0"
   },
   "devDependencies": {
-    "browserify": "^11.0.1",
-    "budo": "mattdesl/budo#6372153",
-    "crass": "^0.7.7",
-    "garnish": "^3.2.0",
+    "autoprefixer-loader": "^3.1.0",
+    "css-loader": "^0.18.0",
     "gh-pages": "^0.4.0",
     "husky": "^0.10.1",
     "karma": "^0.13.9",
-    "karma-browserify": "4.3.0",
     "karma-chai-shallow-deep-equal": "0.0.4",
     "karma-firefox-launcher": "^0.1.4",
     "karma-mocha": "^0.2.0",
     "karma-mocha-reporter": "^1.1.0",
     "karma-sinon-chai": "^1.1.0",
+    "karma-webpack": "^1.7.0",
     "mozilla-download": "^1.0.5",
     "replace": "^0.3.0",
     "semistandard": "^7.0.2",
+    "shader-loader": "^1.1.3",
     "snazzy": "^2.0.1",
-    "uglifyjs": "^2.4.10"
+    "style-loader": "^0.12.4",
+    "uglifyjs": "^2.4.10",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.11.0"
   },
   "scripts": {
     "start": "npm run dev",
-    "dev": "npm run build && budo src/vr-markup.js:build/vr-markup.js --debug --verbose --live --port 9000 --onupdate 'semistandard -v $(git ls-files '*.js') | snazzy' -- -r ./src/vr-markup.js:vr-markup | garnish -v",
-    "build": "mkdir -p build && browserify -r ./src/vr-markup.js:vr-markup -o build/vr-markup.js --debug",
-    "dist": "rm -rf dist/ && mkdir -p dist/ && npm run dist:js:dev && npm run dist:js:min && npm run dist:css:dev && npm run dist:css:min &&  git commit -am 'Bump dist'",
-    "dist:js:dev": "browserify -r ./src/vr-markup.js:vr-markup -o dist/vr-markup.js --debug",
-    "dist:js:min": "browserify -r ./src/vr-markup.js:vr-markup | uglifyjs -cm > dist/vr-markup.min.js",
-    "dist:css:dev": "cp ./style/vr-markup.css dist/.",
-    "dist:css:min": "crass ./style/vr-markup.css > dist/vr-markup.min.css",
+    "dev": "webpack-dev-server --content-base src --progress --watch --inline --hot",
+    "build": "NODE_ENV=production webpack --progress",
+    "build:dev": "webpack --progress --hot",
+    "dist": "rm -rf dist/* && npm run build && npm run build:dev && cp build/* dist && git commit -am 'Bump dist'",
     "replacepaths": "replace '../build/vr-markup.js' '../dist/vr-markup.min.js' gh-pages/ -r && replace '../style/vr-markup.css' '../dist/vr-markup.min.css' gh-pages/ -r",
     "gh-pages": "npm run ghpages",
     "preghpages": "mkdir -p gh-pages && cp -r {components,dist,examples,lib} gh-pages/. && npm run replacepaths",
