--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "browserify": "^11.0.1",
+    "browserify-shader": "^0.1.0",
     "budo": "cvan/budo#7391d13",
     "chai-shallow-deep-equal": "^1.3.0",
     "crass": "^0.7.7",
@@ -36,7 +37,7 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "npm run build && budo src/vr-markup.js:build/vr-markup.js --debug --verbose --live --port 9001 --onupdate 'semistandard -v $(git ls-files '*.js') | snazzy' -- ./src/vr-markup.js -s 'vr-markup' | garnish -v",
-    "browserify": "browserify ./src/vr-markup.js -s 'vr-markup'",
+    "browserify": "browserify -t [browserify-shader --parameterize=true] ./src/vr-markup.js -s 'vr-markup'",
     "build": "mkdir -p build/ && npm run browserify -- --debug -o build/vr-markup.js",
     "dist": "rm -rf dist/ && mkdir -p dist/ && npm run dist:js && npm run dist:css",
     "dist:js": "npm run browserify -- --debug -o dist/vr-markup.js && uglifyjs dist/vr-markup.js -c warnings=false -m -o dist/vr-markup.min.js",
