--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aframe-core",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "homepage": "https://github.com/aframevr/aframe-core",
   "license": "MIT",
   "main": "src/index.js",
@@ -12,7 +12,7 @@
     "present": "0.0.6",
     "request-interval": "^1.0.0",
     "style-attr": "^1.0.1",
-    "three-dev": "0.74.0-beta8",
+    "three-dev": "^0.74.0-beta8",
     "tween.js": "^15.0.0",
     "webvr-polyfill": "borismus/webvr-polyfill#3f47796"
   },
